--- a/src/App.css
+++ b/src/App.css
@@ -49,11 +49,11 @@
   padding-bottom: 15px; /* Extra spacing at bottom */
 }
 
-.polaroid-title {
+.card-title.polaroid-title {
   font-size: 16px;
   font-weight: bold;
   text-align: center;
-  color: #7D4F17 !important;
+  color: #7D4F17;
   margin-top: 10px;
 }
 
@@ -88,8 +88,8 @@
   border-radius: 10px; /* Optional: Rounded corners */
 }
 
-.card-title, h1, h2, h3 {
-  color: #CB3B67 !important;
+.homepage-title{
+  color: #CB3B67;
 }
 
 @keyframes App-logo-spin {
